--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 GOOGLE_CLIENT_ID= 905800321097-o59vdspovt020djrfi8tkd81lloujflo.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+DATABASE_URL="postgresql://postgres:randompassword@localhost:5432/postgres"
