--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prisma": "^5.20.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-lite-youtube-embed": "^2.4.0",
     "react-toastify": "^10.0.5",
     "shadcn-ui": "^0.9.2",
     "tailwind-merge": "^2.5.2",
